@@ -1,2 +1,0 @@
-Another Afterstep-like theme, very simple, only two colours (which are
-customizable)
