@@ -1,2 +1,0 @@
-Outro tema estilo Afterstep, moi sinxelo, só con dous cores (que son
-persoalizables)
