@@ -1,2 +1,0 @@
-Un altro tema basato su Afterstep, molto semplice, solo due colori
-(che sono personalizzabili)
