@@ -1,2 +1,0 @@
-もうひとつの Afterstep に似たテーマで、とてもシンプルで2つの色だけ
-(カスタマイズ可能です)をつかっています。
