@@ -1,2 +1,0 @@
-Kolejny motyw wzorowany na Afterstepie, bardzo prosty -- tylko dwa
-kolory (które można wybierać).
